# SDL

./: .gitignore
2D Pathfinding/: .cproject  .project  meson.build
2D Pathfinding/data/: build.ninja  compile_commands.json
2D Pathfinding/scripts/: copy-data.sh
2D Pathfinding/src/: main.cpp
Another Controlled Bitmap Animation/: .project
Another Controlled Bitmap Animation/src/: main.cpp
Bitmap Animation/: .project
Bitmap Animation/src/: main.cpp
Bitmap animation controlled by user input/: .project
Bitmap animation controlled by user input/scripts/: copy-data.sh
Boost Multi Array/: .cproject  .project  meson.build
Boost Multi Array/src/: main.cpp
Color gradient/: .cproject  .project  meson.build
Color gradient/src/: main.cpp
Controlled Bitmap Animation/: .project
Controlled Bitmap Animation/src/: main.cpp
Conway's Game of Life/: .cproject  .project  meson.build
Conway's Game of Life/src/: Display.cpp  Display.h  main.cpp
Display Bitmap/: .cproject  .project  meson.build
Display Bitmap/src/: main.cpp
Display Grid/: .project
Display Grid/src/: main.cpp
Display Rect/: .project  meson.build
Display Rect/src/: main.cpp
EigenIntersection/: .cproject  .project
HelloBoost/: .cproject  .project
HelloEigen/: .cproject  .project  meson.build
HelloEigen/src/: main.cpp
Mandelbrot set/: .cproject  .project  meson.build
Particles/: .cproject  meson.build
Particles in gravitational field/: .project
Raytracing/: .project  meson.build
Raytracing/src/: Display.cpp  Display.h  main.cpp
Space Invaders Clone/: .cproject  .project
(+13 files in other folders)
